test/scc/stmt/semantic-errors/035.a
035.t:3:12: error: label 'a' used but not defined